pruebas en el comando

--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -64,7 +64,7 @@
 
 
     {{#if usuarioR}}
-        <script type="module" src="consumo/usuarios.js"></script>
+        <script defer type="module" src="consumo/usuarios.js"></script>
     {{/if}}
 
     {{#if clienteR}}
