Cambios en el proyecto Final

--- a/src/views/acceso/login.hbs
+++ b/src/views/acceso/login.hbs
@@ -42,7 +42,7 @@
                                                 <input type="checkbox" class="custom-control-input" id="customCheck">
                                                 <label class="custom-control-label" for="customCheck">Recordarme</label>
                                             </div>
-                                            <a class="mt-3" href="">¿Has olvidado tu contraseña?</a>
+                                            <a class="mt-3" href="/forgot">¿Has olvidado tu contraseña?</a>
                                         </div>
                                         <a href="" id="btnContinuar" class="btn btn-primary btn-user btn-block">Continuar</a>
                                     </form>
