--- a/src/views/categorias/listarCategorias.hbs
+++ b/src/views/categorias/listarCategorias.hbs
@@ -4,7 +4,7 @@
             Gestión de Categorias
         </h1>
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="/">Inicio</a></li>
+            <li class="breadcrumb-item"><a href="/panelAdministrativo">Inicio</a></li>
             <li class="breadcrumb-item"><a href="/listarCategorias">Categorías</a></li>
             <li class="breadcrumb-item active" aria-current="page">
                 Listar Categorías
