--- a/src/views/clientes/listarClientes.hbs
+++ b/src/views/clientes/listarClientes.hbs
@@ -5,7 +5,7 @@
             Gestión de Clientes
         </h1>
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="/">Inicio</a></li>
+            <li class="breadcrumb-item"><a href="/panelAdministrativo">Inicio</a></li>
             <li class="breadcrumb-item"><a href="/listarClientes">Clientes</a></li>
             <li class="breadcrumb-item active" aria-current="page">
                 Listar Clientes
