--- a/src/views/configuracion/listarRoles.hbs
+++ b/src/views/configuracion/listarRoles.hbs
@@ -8,7 +8,7 @@
             Gestion de Roles
         </h1>
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="/">Inicio</a></li>
+            <li class="breadcrumb-item"><a href="/panelAdministrativo">Inicio</a></li>
             <li class="breadcrumb-item"><a href="/listarRoles">Roles</a></li>
             <li class="breadcrumb-item active" aria-current="page">
                 Listar Roles
