--- a/src/views/servicios/formServicios.hbs
+++ b/src/views/servicios/formServicios.hbs
@@ -3,7 +3,7 @@
     <div class="d-sm-flex align-items-center justify-content-between mb-4">
         <h1 class="h3 mb-0 text-gray-800 font-weight-bold">Gestion de Servicios</h1>
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="/">Inicio</a></li>
+            <li class="breadcrumb-item"><a href="/panelAdministrativo">Inicio</a></li>
             <li class="breadcrumb-item"><a href="/listarServicios">Servicios</a></li>
             <li class="breadcrumb-item active" aria-current="page">Crear Servicio</li>
         </ol>
@@ -36,7 +36,7 @@
                                         <div class="input-group-prepend">
                                             <span class="input-group-text"><i class="fas fa-user"></i></span>
                                         </div>
-                                        <input id="txtDuracion" type="text" class="form-control" placeholder="Duracion del servicio">
+                                        <input id="txtDuracion" type="time" class="form-control" placeholder="Duracion del servicio">
                                         <div class="invalid-feedback" id="txtDuracionError"></div>
                                     </div>
                                 </div>
@@ -46,7 +46,7 @@
                                         <div class="input-group-prepend">
                                             <span class="input-group-text"><i class="fas fa-envelope-open"></i></span>
                                         </div>
-                                        <input id="txtPrecio" type="text" class="form-control"
+                                        <input id="txtPrecio" type="number" class="form-control"
                                             placeholder="Precio del servicio">
                                         <div class="invalid-feedback" id="txtPrecioError"></div>
                                     </div>
