--- a/src/views/usuarios/listarUsuarios.hbs
+++ b/src/views/usuarios/listarUsuarios.hbs
@@ -7,7 +7,7 @@
             Gestión de Usuarios
         </h1>
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="/">Inicio</a></li>
+            <li class="breadcrumb-item"><a href="/panelAdministrativo">Inicio</a></li>
             <li class="breadcrumb-item"><a href="/listarUsuarios">Usuarios</a></li>
             <li class="breadcrumb-item active" aria-current="page">
                 Listar Usuarios
