--- a/src/views/categorias/formCategorias.hbs
+++ b/src/views/categorias/formCategorias.hbs
@@ -3,7 +3,7 @@
     <div class="d-sm-flex align-items-center justify-content-between mb-4">
         <h1 class="h3 mb-0 text-gray-800 font-weight-bold">Gestion de Categorias</h1>
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="/">Inicio</a></li>
+            <li class="breadcrumb-item"><a href="/panelAdministrativo">Inicio</a></li>
             <li class="breadcrumb-item"><a href="/listarCategorias">Categorias</a></li>
             <li class="breadcrumb-item active" aria-current="page">Crear Categoria</li>
         </ol>
