--- a/src/views/configuracion/formRoles.hbs
+++ b/src/views/configuracion/formRoles.hbs
@@ -4,7 +4,7 @@
     <div class="d-sm-flex align-items-center justify-content-between mb-4">
         <h1 class="h3 mb-0 text-gray-800 font-weight-bold">Gestion de Roles</h1>
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="/">Inicio</a></li>
+            <li class="breadcrumb-item"><a href="/panelAdministrativo">Inicio</a></li>
             <li class="breadcrumb-item"><a href="/listarRoles">Roles</a></li>
             <li class="breadcrumb-item active" aria-current="page">Crear Rol</li>
         </ol>
