--- a/src/views/partials/navbar.hbs
+++ b/src/views/partials/navbar.hbs
@@ -172,24 +172,24 @@
         <!-- Topbar -->
 
         <!-- Modal Logout -->
-    <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabelLogout"
-        aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabelLogout">Ohh No!</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <p>Estas Seguro de Salir?</p>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-outline-primary" data-dismiss="modal">Cancel</button>
-                    <a href="/" class="btn btn-primary">Salir</a>
+    <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabelLogout" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabelLogout">¡Oh, no!</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>¿Estás seguro de que quieres salir?</p>
+            </div>
+            <div class="modal-footer">
+                <div class="text-center mx-auto">
+                    <button type="button" class="btn btn-danger" data-dismiss="modal">Cancelar</button>
+                <a href="/" class="btn btn-primary ml-3">Si, Salir</a>
                 </div>
             </div>
         </div>
     </div>
-    {{!-- Funcion para cambiar el fondo del modulo del background --}}
+</div>
