--- a/src/views/servicios/listarServicios.hbs
+++ b/src/views/servicios/listarServicios.hbs
@@ -4,7 +4,7 @@
             Gestion de Servicios
         </h1>
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="/">Inicio</a></li>
+            <li class="breadcrumb-item"><a href="/panelAdministrativo">Inicio</a></li>
             <li class="breadcrumb-item"><a href="/listarServicios">Servicios</a></li>
             <li class="breadcrumb-item active" aria-current="page">
                 Listar Servicios
