--- a/src/views/configuracion/listarRoles.hbs
+++ b/src/views/configuracion/listarRoles.hbs
@@ -5,7 +5,7 @@
     <div id="listarUsuarios"></div>
     <div class="d-sm-flex align-items-center justify-content-between mb-4">
         <h1 class="h3 mb-0 text-gray-800 font-weight-bold">
-            Gestion de Roles
+            Gestión de Roles
         </h1>
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="/panelAdministrativo">Inicio</a></li>
@@ -24,8 +24,7 @@
                     <div class="d-flex justify-content-start mb-4">
                         <a class="btn btn-primary btn-sm mr-2 font-weight-bold" href="/crearRoles">
                             <i class="fas fa-user icono mr-3 "></i>Crear Roles</a>
-                        {{!-- <button id="allMonthButton" class="btn btn-secondary ml-4 btn-sm font-weight-bold"> --}}
-                            {{!-- <i class="fas fa-download mr-3"></i>Generar Reporte</button> --}}
+                        
                     </div>
                     <div class="table-responsive pt-3">
                         <table class="table table-bordered rounded text-center" id="dataTable">
