Comentar codigo principal consumo

--- a/src/views/usuarios/listarUsuarios.hbs
+++ b/src/views/usuarios/listarUsuarios.hbs
@@ -24,7 +24,7 @@
                         <a class="btn btn-primary btn-sm mr-2 font-weight-bold" href="/crearUsuario">
                             <i class="fas fa-user icono mr-3 "></i>Crear Usuario</a>
                         <button id="btnGenerar" class="btn btn-secondary ml-4 btn-sm font-weight-bold">
-                            <i class="fas fa-download mr-3"></i>Generar Pdf</button>
+                            <i class="fas fa-file-pdf mr-3" style="color: #000000;"></i>Generar Reporte</button>
                     </div>
                     <div class="table-responsive pt-3">
                         <table class="table table-bordered rounded text-center" id="dataTable">
