--- a/src/views/clientes/listarClientes.hbs
+++ b/src/views/clientes/listarClientes.hbs
@@ -20,9 +20,9 @@
                 <div class="card-body">
                     <div class="d-flex justify-content-start mb-4">
                         <a id="btnGenerar" class="btn btn-secondary btn-sm mr-2 font-weight-bold" href="">
-                            <i class="fas fa-download icono mr-3 "></i>Generar Pdf</a>
+                            <i class="fas fa-file-pdf mr-3" style="color: #000000;"></i>Generar Reporte</a>
                         <a id="btnExcel" class="btn btn-success ml-4 btn-sm font-weight-bold" href="">
-                            <i class="fas fa-file-excel mr-3"></i>Generar Excel</a>
+                            <i class="fas fa-file-excel mr-3"></i>Generar Reporte</a>
                     </div>
                     <div class="table-responsive pt-3">
                         <table class="table table-bordered rounded text-center" id="dataTable">
